# maxzip

./: CMakeLists.txt  README.md
.github/: codecov.yml
.github/workflows/: pipeline.yml
include/: maxzip.hpp
include/maxzip/: common.hpp  compressor.hpp  decoder.hpp  decompressor.hpp  encoder.hpp  stream.hpp
src/: brotli.cpp  internal.hpp  maxzip.cpp  zlib.cpp  zstd.cpp
tests/: CMakeLists.txt  unit.cpp
